Added enter functionality for login and fixed some more fields

--- a/src/views/DeliveryTicket.fxml
+++ b/src/views/DeliveryTicket.fxml
@@ -72,16 +72,16 @@
                                           <DatePicker id="dateTimePickerOrderDate" fx:id="dateTimePickerOrderDate" minWidth="249.0" prefHeight="34.0" prefWidth="249.0" GridPane.columnIndex="1" />
                                           <Label text="Pickup Client" GridPane.rowIndex="2" />
                                           <TextArea fx:id="textAreaSpecialRemarks" minWidth="239.0" prefHeight="56.0" prefWidth="239.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                                          <VBox GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                          <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="5">
                                              <children>
                                                 <HBox>
                                                    <children>
-                                                      <Spinner fx:id="spinnerRequestedPickupHour" minWidth="23.0" prefHeight="33.0" prefWidth="126.0">
+                                                      <Spinner fx:id="spinnerRequestedPickupHour" minWidth="70.0" prefHeight="33.0" prefWidth="70.0">
                                                          <valueFactory>
                                                             <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="12" min="1" />
                                                          </valueFactory>
                                                       </Spinner>
-                                                      <Spinner fx:id="spinnerRequestedPickupMinute" minWidth="40.0" prefHeight="33.0" prefWidth="118.0">
+                                                      <Spinner fx:id="spinnerRequestedPickupMinute" minWidth="70.0" prefHeight="33.0" prefWidth="70.0">
                                                          <valueFactory>
                                                             <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="0" max="60" min="0" />
                                                          </valueFactory>
@@ -89,13 +89,13 @@
                                                             <Insets left="6.0" />
                                                          </HBox.margin>
                                                       </Spinner>
+                                                      <ComboBox fx:id="comboBoxRequestedPickupAMPM" minWidth="70.0" prefHeight="33.0" prefWidth="70.0" promptText="AM">
+                                                         <HBox.margin>
+                                                            <Insets left="10.0" />
+                                                         </HBox.margin>
+                                                      </ComboBox>
                                                    </children>
                                                 </HBox>
-                                                <ComboBox fx:id="comboBoxRequestedPickupAMPM" minWidth="15.0" prefHeight="26.0" prefWidth="250.0" promptText="AM">
-                                                   <VBox.margin>
-                                                      <Insets top="5.0" />
-                                                   </VBox.margin>
-                                                </ComboBox>
                                              </children>
                                           </VBox>
                                        </children>
@@ -194,16 +194,16 @@
                                                       <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
                                                    </GridPane.margin>
                                                 </CheckBox>
-                                                <VBox GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                                <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                                    <children>
                                                       <HBox>
                                                          <children>
-                                                            <Spinner fx:id="spinnerActualPickupTimeHour" minWidth="138.0" prefHeight="33.0" prefWidth="132.0">
+                                                            <Spinner fx:id="spinnerActualPickupTimeHour" minWidth="70.0" prefHeight="33.0" prefWidth="70.0">
                                                                <valueFactory>
                                                                   <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="12" min="1" />
                                                                </valueFactory>
                                                             </Spinner>
-                                                            <Spinner fx:id="spinnerActualPickupTimeMinute" minWidth="89.0" prefHeight="33.0" prefWidth="126.0">
+                                                            <Spinner fx:id="spinnerActualPickupTimeMinute" minWidth="70.0" prefHeight="33.0" prefWidth="70.0">
                                                                <HBox.margin>
                                                                   <Insets left="10.0" />
                                                                </HBox.margin>
@@ -211,21 +211,25 @@
                                                                   <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="60" min="0" />
                                                                </valueFactory>
                                                             </Spinner>
+                                                            <ComboBox fx:id="comboBoxActualPickupTimeAMPM" minWidth="10.0" prefHeight="33.0" prefWidth="65.0" promptText="AM">
+                                                               <HBox.margin>
+                                                                  <Insets left="10.0" />
+                                                               </HBox.margin>
+                                                            </ComboBox>
                                                          </children>
                                                       </HBox>
-                                                      <ComboBox fx:id="comboBoxActualPickupTimeAMPM" minWidth="10.0" prefHeight="26.0" prefWidth="274.0" promptText="AM" />
                                                    </children>
                                                 </VBox>
-                                                <VBox GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                                <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                                    <children>
                                                       <HBox>
                                                          <children>
-                                                            <Spinner fx:id="spinnerActualDeliveryTimeHour" minWidth="138.0" prefHeight="33.0" prefWidth="125.0">
+                                                            <Spinner fx:id="spinnerActualDeliveryTimeHour" minWidth="70.0" prefHeight="33.0" prefWidth="70.0">
                                                                <valueFactory>
                                                                   <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="12" min="1" />
                                                                </valueFactory>
                                                             </Spinner>
-                                                            <Spinner fx:id="spinnerActualDeliveryTimeMinute" minWidth="89.0" prefHeight="33.0" prefWidth="133.0">
+                                                            <Spinner fx:id="spinnerActualDeliveryTimeMinute" minWidth="70.0" prefHeight="33.0" prefWidth="70.0">
                                                                <HBox.margin>
                                                                   <Insets left="10.0" />
                                                                </HBox.margin>
@@ -233,21 +237,25 @@
                                                                   <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="60" min="0" />
                                                                </valueFactory>
                                                             </Spinner>
+                                                            <ComboBox fx:id="comboBoxActualDeliveryTimeAMPM" prefHeight="33.0" prefWidth="65.0" promptText="AM">
+                                                               <HBox.margin>
+                                                                  <Insets left="10.0" />
+                                                               </HBox.margin>
+                                                            </ComboBox>
                                                          </children>
                                                       </HBox>
-                                                      <ComboBox fx:id="comboBoxActualDeliveryTimeAMPM" prefHeight="26.0" prefWidth="267.0" promptText="AM" />
                                                    </children>
                                                 </VBox>
-                                                <VBox GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                                    <children>
                                                       <HBox>
                                                          <children>
-                                                            <Spinner fx:id="spinnerActualDepartureTimeHour" minWidth="138.0" prefHeight="33.0" prefWidth="138.0">
+                                                            <Spinner fx:id="spinnerActualDepartureTimeHour" minWidth="70.0" prefHeight="33.0" prefWidth="70.0">
                                                                <valueFactory>
                                                                   <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="12" min="1" />
                                                                </valueFactory>
                                                             </Spinner>
-                                                            <Spinner fx:id="spinnerActualDepartureTimeMinute" minWidth="89.0" prefHeight="33.0" prefWidth="135.0">
+                                                            <Spinner fx:id="spinnerActualDepartureTimeMinute" minWidth="70.0" prefHeight="33.0" prefWidth="70.0">
                                                                <HBox.margin>
                                                                   <Insets left="10.0" />
                                                                </HBox.margin>
@@ -255,21 +263,25 @@
                                                                   <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="60" min="0" />
                                                                </valueFactory>
                                                             </Spinner>
+                                                            <ComboBox fx:id="comboBoxActualDepartureTimeAMPM" minWidth="10.0" prefHeight="33.0" prefWidth="65.0" promptText="AM">
+                                                               <HBox.margin>
+                                                                  <Insets left="10.0" />
+                                                               </HBox.margin>
+                                                            </ComboBox>
                                                          </children>
                                                       </HBox>
-                                                      <ComboBox fx:id="comboBoxActualDepartureTimeAMPM" minWidth="10.0" prefHeight="26.0" prefWidth="274.0" promptText="AM" />
                                                    </children>
                                                 </VBox>
-                                                <VBox GridPane.columnIndex="1" GridPane.rowIndex="4">
+                                                <VBox alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="4">
                                                    <children>
                                                       <HBox>
                                                          <children>
-                                                            <Spinner fx:id="spinnerActualReturnTimeHour" minWidth="138.0" prefHeight="33.0" prefWidth="120.0">
+                                                            <Spinner fx:id="spinnerActualReturnTimeHour" minWidth="70.0" prefHeight="33.0" prefWidth="70.0">
                                                                <valueFactory>
                                                                   <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="12" min="1" />
                                                                </valueFactory>
                                                             </Spinner>
-                                                            <Spinner fx:id="spinnerActualReturnTimeMinute" minWidth="89.0" prefHeight="33.0" prefWidth="134.0">
+                                                            <Spinner fx:id="spinnerActualReturnTimeMinute" minWidth="70.0" prefHeight="33.0" prefWidth="70.0">
                                                                <HBox.margin>
                                                                   <Insets left="10.0" />
                                                                </HBox.margin>
@@ -277,9 +289,13 @@
                                                                   <SpinnerValueFactory.IntegerSpinnerValueFactory amountToStepBy="1" initialValue="1" max="60" min="00" />
                                                                </valueFactory>
                                                             </Spinner>
+                                                            <ComboBox fx:id="comboBoxActualReturnTimeAMPM" prefHeight="33.0" prefWidth="65.0" promptText="AM">
+                                                               <HBox.margin>
+                                                                  <Insets left="10.0" />
+                                                               </HBox.margin>
+                                                            </ComboBox>
                                                          </children>
                                                       </HBox>
-                                                      <ComboBox fx:id="comboBoxActualReturnTimeAMPM" prefHeight="26.0" prefWidth="275.0" promptText="AM" />
                                                    </children>
                                                 </VBox>
                                                 <Button fx:id="buttonSave" mnemonicParsing="false" text="Save" GridPane.rowIndex="6">
