Select client layout changed

--- a/src/views/DeliveryTicket.fxml
+++ b/src/views/DeliveryTicket.fxml
@@ -36,7 +36,7 @@
                                     <Font size="19.0" />
                                  </font>
                                  <VBox.margin>
-                                    <Insets bottom="20.0" />
+                                    <Insets bottom="20.0" left="10.0" />
                                  </VBox.margin>
                               </Label>
                               <VBox prefHeight="545.0" prefWidth="410.0">
@@ -99,6 +99,9 @@
                                              </children>
                                           </VBox>
                                        </children>
+                                       <padding>
+                                          <Insets left="10.0" />
+                                       </padding>
                                     </GridPane>
                                  </children>
                               </VBox>
@@ -107,7 +110,7 @@
                               <Insets top="50.0" />
                            </HBox.margin>
                         </VBox>
-                        <Separator orientation="VERTICAL" prefHeight="573.0" prefWidth="28.0" />
+                        <Separator opacity="0.0" orientation="VERTICAL" prefHeight="573.0" prefWidth="15.0" />
                         <VBox prefHeight="609.0" prefWidth="485.0">
                            <children>
                               <Pane prefHeight="200.0" prefWidth="200.0">
@@ -149,7 +152,7 @@
                                           </GridPane>
                                        </children>
                                        <padding>
-                                          <Insets top="50.0" />
+                                          <Insets left="20.0" top="50.0" />
                                        </padding>
                                     </VBox>
                                  </children>
@@ -324,6 +327,9 @@
                                              </VBox.margin>
                                           </GridPane>
                                        </children>
+                                       <padding>
+                                          <Insets left="20.0" />
+                                       </padding>
                                     </VBox>
                                  </children>
                               </Pane>
