--- a/src/views/SelectClient.fxml
+++ b/src/views/SelectClient.fxml
@@ -12,10 +12,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="660.0" prefWidth="950.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SelectClient">
    <children>
-      <BorderPane layoutX="10.0" layoutY="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <BorderPane layoutX="10.0" layoutY="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
             <GridPane alignment="CENTER" hgap="10.0" vgap="5.0" BorderPane.alignment="CENTER">
                <columnConstraints>
@@ -25,22 +24,16 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <ComboBox fx:id="comboBoxClient" minWidth="300.0" prefHeight="25.0" prefWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                  <ComboBox fx:id="comboBoxClient" minWidth="300.0" prefHeight="25.0" prefWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                </children>
             </GridPane>
          </center>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
-         <top>
-            <TitledPane alignment="CENTER" animated="false" collapsible="false" expanded="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="940.0" text="Select Client" textAlignment="CENTER" BorderPane.alignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </TitledPane>
-         </top>
          <bottom>
             <HBox alignment="CENTER" prefHeight="74.0" prefWidth="480.0" spacing="10.0" BorderPane.alignment="CENTER">
                <children>
@@ -66,5 +59,10 @@
             </HBox>
          </bottom>
       </BorderPane>
+      <TitledPane alignment="CENTER" animated="false" collapsible="false" expanded="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="940.0" text="Select Client" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </TitledPane>
    </children>
 </AnchorPane>
