--- a/src/views/DeliveryTicket.fxml
+++ b/src/views/DeliveryTicket.fxml
@@ -23,7 +23,7 @@
 
 <AnchorPane prefHeight="660.0" prefWidth="950.0" scaleShape="true" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane layoutX="1.0" layoutY="1.0">
+      <BorderPane layoutX="1.0" layoutY="1.0" prefHeight="660.0" prefWidth="950.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
             <VBox prefHeight="670.0" prefWidth="913.0" scaleShape="false">
                <children>
@@ -111,6 +111,7 @@
                            </HBox.margin>
                         </VBox>
                         <Separator opacity="0.0" orientation="VERTICAL" prefHeight="573.0" prefWidth="15.0" />
+                        <Separator orientation="VERTICAL" prefHeight="200.0" />
                         <VBox prefHeight="609.0" prefWidth="485.0">
                            <children>
                               <Pane prefHeight="200.0" prefWidth="200.0">
